--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div class="controls-grid">
                     <div>
                         <label for="sec-f-x">Función <span class="math-inline">f(x)</span> (Ej: <span class="math-inline">x^3 - 4x - 9</span>):</label>
-                        <input type="text" id="sec-f-x" value="x^3 - 4 * x - 9">
+                        <input type="text" id="sec-f-x" value="pow(x, 3) - 4 * x - 9">
                         <p class="syntax-tip">**Tip:** Usa `pow(x, 2)` para exponentes (Ej: `x^2`).</p>
                     </div>
                     <div>
@@ -108,7 +108,7 @@
                 <div class="controls-grid">
                     <div>
                         <label for="rk4-f-ty">EDO <span class="math-inline">dy/dt = f(t, y)</span> (Ej: <span class="math-inline">y - t^2 + 1</span>):</label>
-                        <input type="text" id="rk4-f-ty" value="y - t^2 + 1">
+                        <input type="text" id="rk4-f-ty" value="y - pow(t, 2) + 1">
                         <p class="syntax-tip">**Tip:** Usa pow(t, 2) para exponentes (Ej: `t^2`).</p>
                     </div>
                     <div>
